# braille-graph

./: Cargo.toml  LICENSE  README.md
sample_data/: industrial_production.csv
src/: lib.rs
src/cli/: handlers.rs  mod.rs  parse.rs  tty_raw.rs
src/core/: bounds.rs  color.rs  config.rs  constants.rs  data.rs  error.rs  mod.rs  rng.rs
src/render/: binner.rs  braille.rs  frame.rs  mod.rs
